# conduwuit

./: .dockerignore  .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  APPSERVICES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_COMPILE.md  Cargo.toml  Containerfile  Cross.toml  DEPLOY.md  DEPLOY_FROM_SOURCE.md  DIFFERENCES.md  Dockerfile  LICENSE  README.md  Rocket-example.toml  Rocket.toml  TURN.md  audit.toml  book.toml  clippy.toml  conduit-example.toml  conduwuit-example.toml  docker-compose.override.traefik.yml  docker-compose.traefik.yml  docker-compose.yml  engage.toml  flake.nix  renovate.json  rust-toolchain.toml  rustfmt.toml
src/admin/: Cargo.toml  admin.rs  command.rs  handler.rs  mod.rs  processor.rs  tests.rs  utils.rs
src/admin/appservice/: appservice_command.rs  commands.rs  mod.rs
src/admin/check/: commands.rs  mod.rs
src/admin/debug/: commands.rs  debug_commands.rs  mod.rs  tester.rs
src/admin/federation/: commands.rs  federation_commands.rs  mod.rs
src/admin/fsck/: commands.rs  fsck_commands.rs  mod.rs
src/admin/media/: commands.rs  media_commands.rs  mod.rs
src/admin/query/: account_data.rs  appservice.rs  globals.rs  mod.rs  presence.rs  pusher.rs  raw.rs  resolver.rs  room_alias.rs  room_state_cache.rs  room_timeline.rs  sending.rs  short.rs  users.rs
src/admin/room/: alias.rs  commands.rs  directory.rs  info.rs  mod.rs  moderation.rs  room_alias_commands.rs  room_commands.rs  room_directory_commands.rs  room_info_commands.rs  room_moderation_commands.rs
src/admin/server/: commands.rs  mod.rs  server_commands.rs
src/admin/tester/: mod.rs
src/admin/user/: commands.rs  mod.rs  user_commands.rs
src/api/: Cargo.toml  appservice_server.rs  mod.rs  router.rs  routes.rs  server_server.rs
src/api/client/: account.rs  account_data.rs  alias.rs  appservice.rs  backup.rs  capabilities.rs  config.rs  context.rs  device.rs  directory.rs  filter.rs  keys.rs  media.rs  media_legacy.rs  membership.rs  message.rs  mod.rs  openid.rs  presence.rs  profile.rs  push.rs  read_marker.rs  redact.rs  relations.rs  report.rs  room.rs  search.rs  send.rs  session.rs  space.rs  state.rs  sync.rs  tag.rs  thirdparty.rs  threads.rs  to_device.rs  typing.rs  unstable.rs  unversioned.rs  user_directory.rs  (+2 more)
src/api/client_server/: account.rs  alias.rs  backup.rs  capabilities.rs  config.rs  context.rs  device.rs  directory.rs  filter.rs  keys.rs  media.rs  membership.rs  message.rs  mod.rs  presence.rs  profile.rs  push.rs  read_marker.rs  redact.rs  relations.rs  report.rs  room.rs  search.rs  session.rs  space.rs  state.rs  sync.rs  tag.rs  thirdparty.rs  threads.rs  to_device.rs  typing.rs  unstable.rs  unversioned.rs  user_directory.rs  voip.rs
src/api/router/: args.rs  auth.rs  handler.rs  mod.rs  request.rs  response.rs  state.rs
src/api/ruma_wrapper/: auth.rs  axum.rs  handler.rs  mod.rs  request.rs  router.rs  xmatrix.rs
src/api/server/: backfill.rs  event.rs  event_auth.rs  get_missing_events.rs  hierarchy.rs  invite.rs  key.rs  make_join.rs  make_knock.rs  make_leave.rs  media.rs  mod.rs  openid.rs  publicrooms.rs  query.rs  send.rs  send_join.rs  send_knock.rs  send_leave.rs  state.rs  state_ids.rs  user.rs  utils.rs  version.rs  well_known.rs
src/core/: Cargo.toml  debug.rs  error.rs  log.rs  mod.rs  pducount.rs  result.rs  server.rs  version.rs
src/core/alloc/: default.rs  hardened.rs  je.rs  mod.rs
src/core/config/: check.rs  manager.rs  mod.rs  proxy.rs
src/core/error/: err.rs  log.rs  mod.rs  panic.rs  response.rs  serde.rs
src/core/info/: cargo.rs  mod.rs  room_version.rs  rustc.rs  version.rs
src/core/log/: color.rs  console.rs  fmt.rs  fmt_span.rs  mod.rs  reload.rs  server.rs  suppress.rs
src/core/matrix/: mod.rs  pdu.rs
src/core/metrics/: mod.rs
src/core/mods/: canary.rs  macros.rs  mod.rs  module.rs  new.rs  path.rs
src/core/pdu/: builder.rs  content.rs  count.rs  event.rs  event_id.rs  filter.rs  id.rs  mod.rs  raw_id.rs  redact.rs  relation.rs  state_res.rs  strip.rs  tests.rs  unsigned.rs
src/core/result/: inspect_log.rs  into_is_ok.rs  log_debug_err.rs  log_err.rs  map_expect.rs  not_found.rs  unwrap_infallible.rs
src/core/state_res/: LICENSE  event_auth.rs  mod.rs  power_levels.rs  room_version.rs  state_event.rs  state_res_bench.rs  test_utils.rs
src/core/utils/: algorithm.rs  arrayvec.rs  bool.rs  bytes.rs  clap.rs  content_disposition.rs  debug.rs  defer.rs  hash.rs  html.rs  json.rs  math.rs  mod.rs  mutex_map.rs  rand.rs  result.rs  set.rs  string.rs  sys.rs  tests.rs  time.rs
src/database/: Cargo.toml  abstraction.rs  account_data.rs  admin.rs  appservice.rs  benches.rs  cork.rs  database.rs  de.rs  deserialized.rs  engine.rs  global_edus.rs  globals.rs  handle.rs  iter.rs  key_backups.rs  key_value.rs  keyval.rs  kvdatabase.rs  kvengine.rs  kvtree.rs  map.rs  maps.rs  media.rs  migrations.rs  mod.rs  opts.rs  pool.rs  proxy.rs  pusher.rs  rooms.rs  sending.rs  ser.rs  slice.rs  stream.rs  tests.rs  transaction_ids.rs  uiaa.rs  users.rs  util.rs  (+1 more)
src/database/abstraction/: heed.rs  persy.rs  rocksdb.rs  sled.rs  sqlite.rs  watchers.rs
src/database/engine/: backup.rs  cf_opts.rs  context.rs  db_opts.rs  descriptor.rs  files.rs  logger.rs  memory_usage.rs  open.rs  repair.rs
src/database/key_value/: account_data.rs  acl.rs  appservice.rs  globals.rs  key_backups.rs  media.rs  mod.rs  presence.rs  pusher.rs  sending.rs  transaction_ids.rs  uiaa.rs  users.rs
src/database/map/: clear.rs  compact.rs  contains.rs  count.rs  get.rs  get_batch.rs  keys.rs  (+17 more)
src/macros/: Cargo.toml  admin.rs  cargo.rs  config.rs  debug.rs  implement.rs  mod.rs  refutable.rs  rustc.rs  utils.rs
src/main/: Cargo.toml  clap.rs  logging.rs  main.rs  mods.rs  restart.rs  runtime.rs  sentry.rs  server.rs  signal.rs  tracing.rs
src/router/: Cargo.toml  layers.rs  mod.rs  request.rs  router.rs  routes.rs  run.rs  serve.rs
src/service/: Cargo.toml  account_data.rs  admin.rs  globals.rs  manager.rs  media.rs  migrations.rs  mod.rs  pdu.rs  service.rs  services.rs  transaction_ids.rs
(+509 files in other folders)
